ItemTags: remove custom enchants, refactor